# pdf-compare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: installation.md
src/pdf_compare/: __init__.py  cli.py  comparator.py  differ.py  renderer.py
tests/: test_comparator.py
